WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16663
leak bot shows createCStringFromNPVariant result leaking
https://bugs.webkit.org/show_bug.cgi?id=16663
Summary
leak bot shows createCStringFromNPVariant result leaking
Darin Adler
Reported
2007-12-29 02:27:39 PST
I found the leak.
Attachments
patch that adds the free we were missing
(1.50 KB, patch)
2007-12-29 02:29 PST
,
Darin Adler
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-12-29 02:29:55 PST
Created
attachment 18168
[details]
patch that adds the free we were missing
Darin Adler
Comment 2
2007-12-29 16:34:01 PST
Committed revision 29032.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug