        Reviewed by Oliver.

- fix http://bugs.webkit.org/show_bug.cgi?id=16663
          leak bot shows createCStringFromNPVariant result leaking

        * DumpRenderTree/TestNetscapePlugIn.subproj/PluginObject.cpp:
        (pluginInvoke): Added a missing free.



Canonical link: https://commits.webkit.org/22871@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29032 268f45cc-cd09-0410-ab3c-d52691b4dbfc